[gd_scene load_steps=4 format=2]

[ext_resource path="res://Image-assets/flag-1.png" type="Texture" id=1]
[ext_resource path="res://Image-assets/sound-on.png" type="Texture" id=2]
[ext_resource path="res://Scripts/ingameOptions.gd" type="Script" id=4]

[node name="ingameOptions" type="Node2D"]
script = ExtResource( 4 )

[node name="blackOverlay" type="Panel" parent="."]
modulate = Color( 0.219608, 0.219608, 0.219608, 0.54902 )
margin_right = 432.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag-1" type="Sprite" parent="."]
position = Vector2( 203.622, 332.982 )
texture = ExtResource( 1 )

[node name="soundBtn" type="TextureButton" parent="."]
margin_left = 188.31
margin_top = 403.309
margin_right = 221.31
margin_bottom = 433.309
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenuBtn" type="Label" parent="."]
margin_left = 166.362
margin_top = 255.346
margin_right = 237.362
margin_bottom = 269.346
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fakeBtn" type="TextureButton" parent="mainMenuBtn"]
margin_right = 71.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resumeBtn" type="Label" parent="."]
margin_left = 174.378
margin_top = 317.407
margin_right = 226.378
margin_bottom = 331.407
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fakeBtn" type="TextureButton" parent="resumeBtn"]
margin_right = 53.0
margin_bottom = 13.0
[connection signal="pressed" from="soundBtn" to="." method="_on_soundBtn_pressed"]
[connection signal="pressed" from="mainMenuBtn/fakeBtn" to="." method="_on_fakeBtn_pressed"]
[connection signal="pressed" from="resumeBtn/fakeBtn" to="." method="_on_fakeBtnResume_pressed"]
